; ModuleID = '/home/carl/AnghaBench/libevent/extr_buffer.c_evbuffer_expand.c'
source_filename = "/home/carl/AnghaBench/libevent/extr_buffer.c_evbuffer_expand.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.evbuffer = type { i32 }
%struct.evbuffer_chain = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @evbuffer_expand(%struct.evbuffer* %0, i64 %1) #0 {
  %3 = alloca %struct.evbuffer*, align 8
  %4 = alloca i64, align 8
  %5 = alloca %struct.evbuffer_chain*, align 8
  store %struct.evbuffer* %0, %struct.evbuffer** %3, align 8
  store i64 %1, i64* %4, align 8
  %6 = load %struct.evbuffer*, %struct.evbuffer** %3, align 8
  %7 = call i32 @EVBUFFER_LOCK(%struct.evbuffer* %6)
  %8 = load %struct.evbuffer*, %struct.evbuffer** %3, align 8
  %9 = load i64, i64* %4, align 8
  %10 = call %struct.evbuffer_chain* @evbuffer_expand_singlechain(%struct.evbuffer* %8, i64 %9)
  store %struct.evbuffer_chain* %10, %struct.evbuffer_chain** %5, align 8
  %11 = load %struct.evbuffer*, %struct.evbuffer** %3, align 8
  %12 = call i32 @EVBUFFER_UNLOCK(%struct.evbuffer* %11)
  %13 = load %struct.evbuffer_chain*, %struct.evbuffer_chain** %5, align 8
  %14 = icmp ne %struct.evbuffer_chain* %13, null
  %15 = zext i1 %14 to i64
  %16 = select i1 %14, i32 0, i32 -1
  ret i32 %16
}

declare dso_local i32 @EVBUFFER_LOCK(%struct.evbuffer*) #1

declare dso_local %struct.evbuffer_chain* @evbuffer_expand_singlechain(%struct.evbuffer*, i64) #1

declare dso_local i32 @EVBUFFER_UNLOCK(%struct.evbuffer*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
